:globe_with_meridians: Update navigation.yml
Change barcoding translation

--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -40,7 +40,7 @@
     href: /en/resources/data-publishing
   - text: Data quality
     href: /en/resources/calidad-datos
-  - text: Barcoding UY
+  - text: ADN Data
     href: /en/resources/barcoding-uy
   # - text: Best practices for georeferencing
   #   href: /en/resources/georeferencing-practices
