--- a/_data/en/sections.yml
+++ b/_data/en/sections.yml
@@ -8,7 +8,7 @@ stats:
     - title: <span data-ajax-url="https://api.gbif.org/v1/occurrence/search?publishingCountry=UY&country=UY&hasCoordinate=true">1500000</span>
       description: Occurrences with coordinates
       background: assets/images/icons/ocurrences.png
-      href: /en/occurrence/search
+      href: /en/occurrence/search?hasCoordinate=true
     - title: <span data-ajax-url="https://api.gbif.org/v1/dataset/search?publishingCountry=UY">12</span>
       description: Datasets
       background: assets/images/icons/datasets.png
