:globe_with_meridians:
Update translations in various pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,7 +39,7 @@
   - text: Plantillas Darwin Core 
     href: /resources/data-publishing
   - text: Calidad de datos
-    href: /resources/calidad-datos
+    href: /resources/data-quality
   - text: Datos de ADN
     href: /resources/barcoding-uy
 #  - text: Buenas prácticas para georreferenciación 
