--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -1,11 +1,11 @@
 stats:
   klass: contentTypesStat
   features:
-    - title: <span data-ajax-url="https://api.gbif.org/v1/occurrence/search?publishingCountry=UY&country=UY">1500000</span>
+    - title: <span data-ajax-url="https://api.gbif.org/v1/occurrence/search?country=UY">1500000</span>
       description: Registros
       background: assets/images/icons/registers.png
       href: /occurrence/search
-    - title: <span data-ajax-url="https://api.gbif.org/v1/occurrence/search?publishingCountry=UY&country=UY&hasCoordinate=true">1500000</span>
+    - title: <span data-ajax-url="https://api.gbif.org/v1/occurrence/search?country=UY&hasCoordinate=true">1500000</span>
       description: Registros con coordenadas
       background: assets/images/icons/ocurrences.png
       href: /occurrence/search?hasCoordinate=true
@@ -13,6 +13,10 @@ stats:
       description: Conjuntos de datos
       background: assets/images/icons/datasets.png
       href: /dataset/search
+    - title: 4
+      description: Publicadores nacionales
+      background: assets/images/icons/publishers.png
+      href: https://www.gbif.org/publisher/search?country=UY
     - title: <span data-ajax-url="https://api.gbif.org/v1/grscicoll/collection?country=UY&displayOnNHCPortal=true">25</span>
       description: Colecciones registradas
       background: assets/images/icons/collections.png
