--- a/_data/en/sections.yml
+++ b/_data/en/sections.yml
@@ -32,7 +32,7 @@ welcome:
     CC BY 4.0 - <em>Sicalis luteola</em> (Misto). By Enrique González, Museo Nacional de Historia Natural de Uruguay. 2019. Via Wikimedia Commons.
   cta: 
     - text: Do you want to share your data?
-      href: /faq/#cómo-puedo-convertirme-en-una-organización-publicador-de-datos
+      href: /en/resources/publisher-registry
 checklist:
   title: Checklist
   description: |
