--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -32,7 +32,7 @@ welcome:
     CC BY 4.0 - <em>Leones marino (Otaria flavescens)</em>. Por Enrique González, Museo Nacional de Historia Natural de Uruguay. 2022. Via Wikimedia Commons.
   cta: 
     - text: ¿Querés compartir tus datos?
-      href: /faq/#cómo-puedo-convertirme-en-una-organización-publicador-de-datos
+      href: /resources/publisher-registry
 checklist:
   title: Listas de especies
   description: |
