--- a/_data/en/footer.yml
+++ b/_data/en/footer.yml
@@ -18,10 +18,10 @@ columns:
       [<img src="/assets/images/logos/logoMinEducacion.png" alt="Logo Ministerio de Educación y Cultura" style="width: 220px"/>](https://www.gub.uy/ministerio-educacion-cultura/)
 
   - description: | # Can be Markdown
-      [<img src="/assets/images/logos/logoDNC.png" alt="Logo Dirección Nacional de Cultura" style="width: 220px"/>](https://www.gub.uy/ministerio-educacion-cultura/institucional/estructura-del-organismo/direccion-nacional-cultura)
+      [<img src="/assets/images/logos/logoDNC.png" alt="Logo Dirección Nacional de Cultura" style="width: 250px"/>](https://www.gub.uy/ministerio-educacion-cultura/institucional/estructura-del-organismo/direccion-nacional-cultura)
 
   - description: | # Can be Markdown
-      [<img src="/assets/images/logos/logoMNHN.png" alt="Logo Museo Nacional de Historia Natural" style="width: 220px"/>](https://www.gub.uy/ministerio-educacion-cultura/)  
+      [<img src="/assets/images/logos/logoMNHN.png" alt="Logo Museo Nacional de Historia Natural" style="width: 180px"/>](https://www.mna.gub.uy/innovaportal/v/3811/14/mecweb/museo-nacional-de-historia-natural)  
 
 # Small print license statement to add at the bottom of the footer. Can be Markdown
 # Will be prefixed by "© {{ site.author }}" if defined in _config.yml
