--- a/_data/en/footer.yml
+++ b/_data/en/footer.yml
@@ -15,6 +15,9 @@ columns:
       href: /en/faq/
 
   - description: | # Can be Markdown
+      [<img src="/assets/images/logos/logoMA.png" alt="Logo Ministerio de Ambiente" style="width: 220px"/>](https://www.gub.uy/ministerio-ambiente/)
+
+  - description: | # Can be Markdown
       [<img src="/assets/images/logos/logoMinEducacion.png" alt="Logo Ministerio de Educación y Cultura" style="width: 220px"/>](https://www.gub.uy/ministerio-educacion-cultura/)
 
   - description: | # Can be Markdown
