--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -31,7 +31,7 @@
   menu: # Dropdown menu (one level deep only)
   - text: Darwin Core Standard
     href: /en/resources/darwin-core
-  - text: Template for data publishing
+  - text: Templates for data publishing
     href: /en/resources/data-publishing
   - text: Data quality
     href: /en/resources/data-quality
