--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,6 +35,8 @@
     href: /resources/data-publishing
   - text: Calidad de datos
     href: /resources/data-quality
+  - text: Formación
+    href: /resources/capacity-enhancement
 #  - text: Buenas prácticas para georreferenciación 
 #    href: /resources/georeferencing-practices
 #  - text: Guía para georreferenciación de datos
