--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -35,6 +35,8 @@
     href: /en/resources/data-publishing
   - text: Data quality
     href: /en/resources/data-quality
+  - text: Training
+    href: /en/resources/capacity-enhancement
   # - text: Best practices for georeferencing
   #   href: /en/resources/georeferencing-practices
   # - text: Guide for georeferencing data
