--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -20,7 +20,7 @@ columns:
       * Juncal 1385
       * 2917 3380
       * Uruguay
-      * [Administrador del nodo SIBUy](mailto:biodiversidad@ambiente.gub.uy)
+      * [biodiversidad@ambiente.gub.uy](mailto:biodiversidad@ambiente.gub.uy)
     connectIcons: false  
     links:
     - text: Preguntas frecuentes
