--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ defaults:
       path: "_posts" # an empty string here means all files in the project
     values:
       layout: "post"
-      lang: "es"
+      lang: es
       permalink: "/post/:year/:slug/"   # Use /post/yyyy/{filename}/ as permalink for all posts
   -
     scope:
