--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -37,17 +37,9 @@
     href: /resources/data-quality
   - text: Formación
     href: /resources/capacity-enhancement
-#  - text: Buenas prácticas para georreferenciación 
-#    href: /resources/georeferencing-practices
-#  - text: Guía para georreferenciación de datos
-#    href: /resources/georeference-guide
-#  - text: Buenas prácticas para publicación de datos sensibles
-#    href: /resources/sensible-data
-#  - text: Guía para la limpieza de datos
-#    href: /resources/open-refine
 
 - text: Acerca de
   href: /about
 
 - text: Noticias
-  href: /news
+  href: /news/
