--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -41,7 +41,7 @@ checklist:
     - preTitle: Listas rojas
       title: Especies de fauna del Uruguay evaluadas y reportadas en Listas Rojas
       description: |
-        La presente lista compila las especies de fauna evaluadas y reportadas en las Listas Rojas del Uruguay, publicadas por el Ministerio de Ambiente. Se comparten así las especies que hicieron parte de las evaluaciones del estado de conservación de la avifauna (Aspiro, Alfaro & Jiménez, 2012) y la herpetofauna (Carreira & Maneyro, 2015) de Uruguay, con base en los criterios de la Unión Internacional para la Conservación de la Naturaleza.
+        La presente lista compila las especies de fauna evaluadas y reportadas en las Listas Rojas del Uruguay, publicadas por el Ministerio de Ambiente. Se comparten así las especies que hicieron parte de las evaluaciones del estado de conservación de la avifauna (Aspiroz, Alfaro & Jiménez, 2012) y la herpetofauna (Carreira & Maneyro, 2015) de Uruguay, con base en los criterios de la Unión Internacional para la Conservación de la Naturaleza.
       background: https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Amphisbaena_darwinii_Uruguay%2C_2020.jpg/640px-Amphisbaena_darwinii_Uruguay%2C_2020.jpg
       imageLicense: |
         CC BY SA 4.0 - <em>Amphisbaena darwinii</em> (Misto). Por Enrique González, Museo Nacional de Historia Natural de Uruguay. 2020. Via Wikimedia Commons.
