--- a/_data/en/sections.yml
+++ b/_data/en/sections.yml
@@ -41,7 +41,7 @@ checklist:
     - preTitle: Red list
       title: Species of Uruguayan fauna evaluated and reported in Red Lists
       description: |
-        This list compiles the fauna species evaluated and reported in the Red Lists of Uruguay, published by the Ministry of Environment. The species that were part of the assessments of the conservation status of the avifauna (Aspiro, Alfaro & Jiménez, 2012) and herpetofauna (Carreira & Maneyro, 2015) of Uruguay, based on the criteria of the International Union for Conservation of Nature, are shared.
+        This list compiles the fauna species evaluated and reported in the Red Lists of Uruguay, published by the Ministry of Environment. The species that were part of the assessments of the conservation status of the avifauna (Aspiroz, Alfaro & Jiménez, 2012) and herpetofauna (Carreira & Maneyro, 2015) of Uruguay, based on the criteria of the International Union for Conservation of Nature, are shared.
       background: https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Amphisbaena_darwinii_Uruguay%2C_2020.jpg/640px-Amphisbaena_darwinii_Uruguay%2C_2020.jpg
       imageLicense: |
         CC BY SA 4.0 - <em>Amphisbaena darwinii</em> (Misto). By Enrique González, Museo Nacional de Historia Natural de Uruguay. 2020. Via Wikimedia Commons.
